In-progress commit

--- a/seattle_collisions.feature_eng.python.1_0.ipynb
+++ b/seattle_collisions.feature_eng.python.1_0.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Seattle_Collisions_Weather.csv', low_memory=False)\n",
+    "df = pd.read_csv('Seattle_Collisions_Weather.csv', low_memory=False, index=0)\n",
     "print('File downloaded')"
    ]
   },
@@ -798,6 +798,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1472,6 +1477,18 @@
     "df['solar_azimuth'] = df.apply(lambda x: solar_azimuth(x.INCDTTM), axis=1)\n",
     "df['solar_azimuth_round'] = df.apply(lambda x: round(x.solar_azimuth), axis=1)\n",
     "df['solar_elevation'] = df.apply(lambda x: solar_elevation(x.INCDTTM), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs = np.random.RandomState(0)\n",
+    "corr = df.corr()\n",
+    "cm = sns.light_palette(\"green\", as_cmap=True)\n",
+    "corr.style.background_gradient(cmap=cm).set_precision(2)"
    ]
   },
   {
