--- a/seattle_collisions.model_evaluate.python.1_0.ipynb
+++ b/seattle_collisions.model_evaluate.python.1_0.ipynb
@@ -64,12 +64,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week = [0,1,2,3,4,5,6]\n",
+    "workweek = [0,1,2,3,4]\n",
+    "weekend = [5,6]\n",
+    "monday = [0]\n",
+    "tuesday = [1]\n",
+    "wednesday = [2]\n",
+    "thursday = [3]\n",
+    "friday = [4]\n",
+    "saturday = [5]\n",
+    "sunday = [6]\n",
+    "\n",
+    "monday_color = 'red'\n",
+    "tuesday_color = 'yellow'\n",
+    "wednesday_color = 'orange'\n",
+    "thursday_color = 'blue'\n",
+    "friday_color = 'green'\n",
+    "saturday_color = 'brown'\n",
+    "sunday_color = 'purple'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Seattle_Collisions_Final.csv', low_memory = False, parse_dates=True, index_col=0)\n",
-    "df['INCDTTM'] = pd.to_datetime(df['INCDTTM'])"
+    "#df = pd.read_csv('Seattle_Collisions_Final.csv', low_memory = False, parse_dates=True, index_col=0)\n",
+    "#df['INCDTTM'] = pd.to_datetime(df['INCDTTM'])"
    ]
   },
   {
@@ -545,26 +571,7 @@
    "execution_count": 123,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "week = [0,1,2,3,4,5,6]\n",
-    "workweek = [0,1,2,3,4]\n",
-    "weekend = [5,6]\n",
-    "monday = [0]\n",
-    "tuesday = [1]\n",
-    "wednesday = [2]\n",
-    "thursday = [3]\n",
-    "friday = [4]\n",
-    "saturday = [5]\n",
-    "sunday = [6]\n",
-    "\n",
-    "monday_color = 'red'\n",
-    "tuesday_color = 'yellow'\n",
-    "wednesday_color = 'orange'\n",
-    "thursday_color = 'blue'\n",
-    "friday_color = 'green'\n",
-    "saturday_color = 'brown'\n",
-    "sunday_color = 'purple'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
